   command label.
   Add 'parent' argument to some dialogs_show_input*() functions because
   the dialog parent may not always be the main window.
 * src/build.c, src/dialogs.c, src/callbacks.c:
   Don't change default build command entry color when cancelling
   label editing.
   Make dialogs_show_input() return NULL when cancelled.


2010-11-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/build.c, doc/geany.txt, doc/geany.html:
   Change 'Non-Filetype Commands' to 'Independent Commands' in the Set
   Build Commands dialog.
 * doc/geany.txt, doc/geany.html:
   Use 'Filetype build commands' and 'Independent build commands'.
   Fix saying project *independent* execute can only be set by hand.


2010-11-16  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/keybindings.c, src/editor.c, src/editor.h:
   Make Reflow Lines/Block command use the current indented block, not
   the whole paragraph, which could have mixed indentation.
   Fix memory leak and off-by-one bug on first line when using Select
   Paragraph command.
 * src/utils.c, src/highlighting.c, src/highlighting.h,
   src/plugindata.h, src/plugins.c, src/editor.c, src/editor.h,
   plugins/geanyfunctions.h:
   Add API functions (patch by Eugene Arshinov, thanks):
   Move editor.c: is_{string,comment,code}_style() functions to
   highlighting.c, add to API.
   Add editor_find_snippet(), editor_insert_snippet(),
   utils_find_open_xml_tag() to API.


2010-11-15  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c, doc/geany.txt, doc/geany.html:
   Don't use XML tag auto-indentation when '</' is to the right of the
   cursor; allow auto-indentation when XML tag auto-closing is also
   enabled.
 * doc/geany.txt, doc/geany.html:
   Rename 'Format' section 'Filetype configuration'.


2010-11-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * waf:
   Update Waf to current SVN version.

